feat: Implement some functions with router discount
- getUserCart
- createUserCart
- updateUserCart
- deleteCart
