# Ecommerce_Backend/src/base/router/app.router.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express'
 import { authRouter } from '~/modules/auth/router'
+import { cartRouter } from '~/modules/Cart/router'
 import { discountRouter } from '~/modules/Discount/router'
 import { inventoryRouter } from '~/modules/Inventory/router'
 import { productRouter } from '~/modules/products/router'
@@ -10,3 +11,4 @@ appRouter.use('/auth', authRouter)
 appRouter.use('/products', productRouter)
 appRouter.use('/inventories', inventoryRouter)
 appRouter.use('/discounts', discountRouter)
+appRouter.use('/cart', cartRouter)
